[tool.poetry]
name = "airbnb-challenge"
version = "0.1.0"
description = ""
authors = ["seedjin298 <78636647+seedjin298@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
